immutableCollections 반환으로 인해 collect메서드 수정